entity_macros/tests/ui/attribute/conflicting-field-named-last_updated.stderr
error: Conflicting field with same name
 --> $DIR/conflicting-field-named-last_updated.rs:7:5
  |
7 |     last_updated: usize,
  |     ^^^^^^^^^^^^
